--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -74,6 +74,19 @@ average=mean(sMyData2)
 
 
 # What size of class makes the 2:1 bet fair?  Use manipulation of number of Students to tune Brownlows earnings to zero.
+```{r}
+MyData3 = numeric(1000)
+for (i in 1:1000) {
+  MyData3[i]= BrLw(numClass = 29)
+}
+sMyData3 = sort(MyData3) 
+low=sMyData3[25]
+high=sMyData3[975]
+middle=sMyData3[500]
+```
+
+
+## Effectiveness Confidence Interval `r low`  to `r high` with average `r middle`
 
 <!--Explain and display the results of your method of coming up with the estimate of professor Brownlows betting profits!-->
 
